--- a/terminalInfo.html
+++ b/terminalInfo.html
@@ -427,7 +427,7 @@
                 page = Number((this).innerText);
                 if (page != "«" || page != "»") {
                     $.ajax({
-                        url     : '../services/fetch.php',
+                        url     : 'services/fetch.php',
                         type    : 'GET',
                         dataType: "json",
                         data    : {
