--- a/upload.html
+++ b/upload.html
@@ -124,7 +124,7 @@
                          aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <form method="post" id="noteForm" name="noteForm" action="../services/upload.php"
+                                <form method="post" id="noteForm" name="noteForm" action="services/upload.php"
                                       enctype="multipart/form-data">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal">
