--- a/customerInfo.html
+++ b/customerInfo.html
@@ -440,7 +440,7 @@
                 page = Number((this).innerText);
                 if (page != "«" || page != "»") {
                     $.ajax({
-                        url     : '../services/fetch.php',
+                        url     : 'services/fetch.php',
                         type    : 'GET',
                         dataType: "json",
                         data    : {
